# pq-smart-wallet

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  design_doc.md
archive/ml-dsa-test/: Cargo.toml
archive/ml-dsa-test/benches/: ml_dsa_bench.rs
archive/ml-dsa-test/src/: lib.rs
demo/: .gitignore  README.md  setup.sh
demo/dapp/: index.html  package-lock.json  package.json  vite.config.ts
demo/dapp/src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
demo/dapp/src/components/: SendTransaction.tsx
demo/wallet/: index.html  package-lock.json  package.json  vite.config.ts
demo/wallet/src/: App.tsx  config.ts  vite-env.d.ts
demo/wallet/src/components/: PairInput.tsx  StatusLog.tsx  TxApproval.tsx
demo/wallet/src/lib/: bundler.ts  signer.ts  snap-signer.ts  userop.ts
docs/: LOCAL_DEV_GUIDE.md
evm/: .gitignore  README.md  foundry.toml
evm/src/: PQValidatorModule.sol
evm/src/interfaces/: IMLDSAVerifier.sol
evm/test/: PQValidator.t.sol
pq-snap/: .gitignore  README.md  biome.json  package.json  snap.manifest.json  tsconfig.json  vitest.config.ts
pq-snap/src/: index.ts  state.ts  types.ts
pq-snap/src/crypto/: index.ts  mldsa.ts
pq-snap/src/handlers/: index.ts  keys.ts  sign.ts
pq-snap/src/utils/: encryption.ts  index.ts
pq-snap/test/: errors.test.ts  kat.test.ts  mldsa.test.ts
pq-snap/test-ui/: index.html
pq-validator/: Cargo.toml  README.md
pq-validator/src/: lib.rs  main.rs
scripts/: README.md  dev-stack.sh  e2e-test.sh  spec_metadata.sh
scripts/cli/: Cargo.toml
scripts/cli/src/: lib.rs  userop.rs
test-vectors/: js-noble-vectors.json
