[package]
name = "pq-validator"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "^1.0.1"
alloy-sol-types = "^1.0.1"
ml-dsa = { version = "0.1.0-rc.7", default-features = false, features = ["alloc", "rand_core"] }
stylus-sdk = "0.10.0"

# Pin to avoid semver breakage: alloy-tx-macros 1.6.x generates code for
# a TransactionEnvelope trait that only exists in alloy-consensus >= 1.6.x,
# but stylus-test pulls alloy-consensus 1.0.x.
alloy-tx-macros = "=1.0.38"

[dev-dependencies]
hex = "0.4.3"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stylus-sdk = { version = "0.10.0", features = ["stylus-test"] }
stylus-test = "0.10.0"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
contract-client-gen = []

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
