[package]
name = "pq-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "^1.0.1"
alloy-sol-types = "^1.0.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4.3"
ml-dsa = "0.1.0-rc.7"
rand = "0.10.0"

[[bin]]
name = "pq-keygen"
path = "src/bin/pq_keygen.rs"

[[bin]]
name = "pq-sign"
path = "src/bin/pq_sign.rs"

[[bin]]
name = "pq-verify"
path = "src/bin/pq_verify.rs"
